# reposter

./: .gitattributes  .gitignore  EVENT_DRIVEN_ARCHITECTURE.md  README.md  auth.json  config.yaml  conftest.py  main.py  mise.toml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  release.yml  test.yml
docs/: README.ru.md  index.md
src/reposter/: __main__.py  composition.py  exceptions.py  manager.py
src/reposter/config/: settings.py
src/reposter/core/: app_manager.py  composition.py  event_system.py  health_monitor.py  manager.py  post_processor.py  settings_manager.py  state_manager.py
src/reposter/executors/: binding_task_executor.py
src/reposter/interfaces/: app_composer.py  app_manager.py  base_manager.py  task_executor.py
src/reposter/managers/: boosty_manager.py  telegram_manager.py  vk_manager.py  vk_user_manager.py  ytdlp_manager.py
src/reposter/models/: __init__.py  boosty_auth.py  downloaded_artifact.py  dto.py  prepared_attachment.py  prepared_post.py  vk.py  (+2 more)
tests/: test_cleaner.py  test_compatibility.py  test_main.py  test_manager.py  test_text_utils.py
tests/config/: test_settings.py
tests/core/: test_app_manager.py  test_composition.py  test_event_system.py  test_health_monitor.py  test_post_processor.py  test_settings_manager.py  test_state_manager.py
tests/executors/: test_binding_task_executor.py
tests/managers/: test_boosty_manager.py  test_telegram_manager.py  test_vk_manager.py  test_ytdlp_manager.py
tests/processing/: test_post_processor.py  test_steps.py
tests/utils/: test_deep_diff.py  test_text_utils.py
(+10 files in other folders)
